--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
 /*FUENTES*/
 @font-face{
     font-family: 'TrebuchetMS';
-    src: url(fonts/TrebuchetMS.ttf);
+    src: url('fonts/TrebuchetMS.ttf');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face{
     font-family: 'BebasNeue';
-    src: url(fonts/BebasNeue.otf);
+    src: url('fonts/BebasNeue.otf');
     font-weight: normal;
     font-style: normal;
 }
@@ -107,5 +107,28 @@ body{
 #menu ul li a:hover{
     color: #37bcf9;
     transform: scale(1.2, 1.2);
+}
+
+/*BANNER*/
+#banner{
+    width: 95.6%;
+    height: 100px;
+    border: 10px solid white;
+    box-shadow: 0px 0px 2px gray;
+    background: url("../img/bakbaner.png");
+    background-position: -240px -200px;
+    margin: 20px auto;
+}
+
+#banner h1{
+    display: block;
+    width: 850px;
+    font-family: "BebasNeue";
+    color: white;
+    font-size: 45px;
+    font-weight: normal;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 1px black;
+    margin: 27px auto;
 }
 
