--- a/css/styles.css
+++ b/css/styles.css
@@ -36,11 +36,11 @@ body{
 }
 
 .wrap{
-    width: 1200px;
+    width: 1250px;
     margin: 0px auto;
 }
 
-.gear{
+.gear, .icon{
     font-family: 'WebSymbolsRegular';
 }
 
@@ -111,7 +111,7 @@ body{
 
 /*BANNER*/
 #banner{
-    width: 95.6%;
+    width: 95.5%;
     height: 100px;
     border: 10px solid white;
     box-shadow: 0px 0px 2px gray;
@@ -131,4 +131,23 @@ body{
     text-shadow: 2px 2px 1px black;
     margin: 27px auto;
 }
+
+/*TARJETAS*/
+.card{
+    float: left;
+    width: 205px;
+    height: 305px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 2px #ddd;
+    background-color: white;
+    overflow: hidden;
+    margin: 21.7px;
+    margin-top: 40px;
+    cursor: pointer;
+}
+
+.cards:last-child{
+    margin-right: 0px;
+}
+
 
