--- a/css/styles.css
+++ b/css/styles.css
@@ -150,4 +150,31 @@ body{
     margin-right: 0px;
 }
 
+.card .icon{
+    display: block;
+    width: 100%;
+    height: 130px;
+    font-size: 50px;
+    line-height: 110px;
+    text-align: center;
+    margin: 0px auto;
+}
+
+.card .category{
+    width: 100%;
+    height: 50px;
+    font-family: "TrebuchetMS";
+    font-size: 21px;
+    font-weight: bold;
+    text-align: center;
+    color: #04538c;
+}
+
+.card .description{
+    font-family: "TrebuchetMS";
+    color: #0479cc;
+    text-align: center;
+    font-size: 15px;
+}
+
 
