--- a/css/styles.css
+++ b/css/styles.css
@@ -71,12 +71,47 @@ body{
     transition: all 300ms;
 }
 
+#logo:hover{
+    border-radius: 2px;
+    color: black;
+    background-color: #ccc;
+}
+
 #logo .gear{
     display: block;
     float: left;
     font-size: 30px;
     margin-top: 8px;
     margin-left: 26px;
+    animation-name: rotate-gear;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes rotate-gear{
+    from{
+        transform: rotatez(0deg);
+    }
+    to{
+        transform: rotatez(360deg);
+    }
+}
+
+#logo:hover .gear{
+    animation: fromBellow 500ms linear;
+}
+
+@keyframes fromBellow{
+    0%{
+        transform: translatey(0%);
+    }
+    50%{
+        transform: translatey(200%);
+    }
+    100%{
+        transform: translatey(0%);
+    }
 }
 
 #logo h3{
@@ -86,6 +121,19 @@ body{
     margin-top: 5px;
     margin-right: 65px;
     transition: all 300ms;
+}
+
+#logo:hover h3{
+    animation: fromRight 300ms linear;
+}
+
+@keyframes fromRight{
+    from{
+        transform: translatex(200%);
+    }
+    to{
+        transform: translatex(0%);
+    }
 }
 
 #menu{
