--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,11 @@ body{
     margin: 21.7px;
     margin-top: 40px;
     cursor: pointer;
+    transition: all 300ms;
+}
+
+.card:hover{
+    background-color: black;
 }
 
 .cards:last-child{
@@ -246,6 +251,22 @@ body{
     line-height: 110px;
     text-align: center;
     margin: 0px auto;
+    transition: all 300ms;
+}
+
+.card:hover .icon{
+    font-size: 70px;
+    color: #37bcbcf9;
+    animation: showIcon 300ms linear;
+}
+
+@keyframes showIcon{
+    from{
+        transform: translatey(-200%);
+    }
+    to{
+        transform: translatey(0%);
+    }
 }
 
 .card .category{
@@ -256,6 +277,23 @@ body{
     font-weight: bold;
     text-align: center;
     color: #04538c;
+    transition: all 300ms;
+}
+
+.card:hover .category{
+    color: white;
+    animation: showCategory 400ms linear;
+}
+
+@keyframes showCategory{
+    from{
+        transform: translatey(-300%);
+        color: black;
+    }
+    to{
+        transform: translatey(0%);
+        color: white;
+    }
 }
 
 .card .description{
@@ -263,6 +301,23 @@ body{
     color: #0479cc;
     text-align: center;
     font-size: 15px;
+    transition: all 300ms;
+}
+
+.card:hover .description{
+    color: white;
+    animation: showDescription 400ms linear;
+}
+
+@keyframes showDescription{
+    from{
+        transform: translatex(-300%);
+        color: black;
+    }
+    to{
+        transform: translatex(0%);
+        color: white;
+    }
 }
 
 /*BARRA LATERAL*/
