--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,31 @@ body{
     margin-bottom: 20px;
 }
 
+#social .overlay{
+    display: block;
+    height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 1px #ccc;
+    border: 1px solid #237391;
+    box-shadow: 0px 0px 4px #ccc;
+    background-color: #2ea3ce;
+    position: absolute;
+    padding: 5px;
+    margin-left: 70px;
+    margin-top: -52px;
+    cursor: pointer;
+    transform: translateX(-80%);
+    opacity: 0;
+    transition: all 400ms;
+}
+
+#social div:hover .overlay{
+    opacity: 1;
+    transform: translateX(0%);
+}
+
 /*ARTICULOS*/
 #articles{
     width: 860px;
