--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,4 +8,20 @@
         width: 17%;
         margin: 1.4%;
     }
+
+    #articles{
+        width: 63%;
+    }
+
+    #articles article{
+        width: 97%;
+    }
+
+    #footer .wrap > div{
+        width: 24%;
+    }
+
+    #footer #browsers img{
+        width: 14%;
+    }
 }
