--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,9 +4,22 @@
         margin: 0px auto;
     }
 
+    #banner h1{
+        font-size: 35px;
+        text-align: center;
+        margin: 33px auto;
+    }
+
     .card{
         width: 17%;
         margin: 1.4%;
+    }
+
+    .card p{
+        display: block;
+        width: 90%;
+        margin: 0px auto;
+        text-align: center;
     }
 
     #articles{
@@ -23,5 +36,9 @@
 
     #footer #browsers img{
         width: 14%;
+    }
+
+    #footer h5{
+        font-size: 30px;
     }
 }
