Responsive avanzado para tablet o pantallas medianas

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,11 @@
-@media (max-width:1250px){
+@media (max-width: 1250px){
     .wrap{
         width: 90%;
         margin: 0px auto;
     }
 
     #banner h1{
+        width: 100%;
         font-size: 35px;
         text-align: center;
         margin: 33px auto;
@@ -40,5 +41,76 @@
 
     #footer h5{
         font-size: 30px;
+    }
+}
+
+@media (max-width: 1022px){
+    .card .category{
+        font-size: 17px;
+    }
+
+    .card .description{
+        font-size: 14px;
+    }
+
+    #articles{
+        width: 61%;
+    }
+}
+
+@media (max-width: 969px){
+    #articles{
+        width: 59%;
+    }
+
+    #footer .wrap > div{
+        width: 26%;
+        margin: 25px;
+    }
+
+    #footer h5{
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 922px){
+    #articles{
+        width: 65%;
+    }
+
+    #lateral{
+        width: 25%;
+    }
+    
+    #lateral input[type="text"]{
+        width: 78%;
+    }
+
+    .aside-box{
+        width: 95%;
+         min-height: 140px;
+        height: auto;
+        padding-bottom: 10px;
+    }
+
+    #login a{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    #login input[type="email"], #login input[type="password"]{
+        width: 65%;
+    }
+
+    #login #user, #login #password{
+        margin-left: 25px;
+    }
+
+    #login input[type="submit"], #login input[type="button"], #login input[type="reset"], #login button{
+        margin-bottom: 0px;
+    }
+
+    #login input[type="reset"]{
+        display: none;
     }
 }
