Responsive avanzado para smartphones o pantallas de tamaño reducido

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -114,3 +114,33 @@
         display: none;
     }
 }
+
+@media (max-width: 899px){
+    #lateral h3{
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 799px){
+    #banner h1{
+        font-size: 29px;
+    }
+
+    .card{
+        height: auto;
+        margin: 1.3%;
+    }
+
+    .card .category{
+        font-size: 15px;
+        margin-top: -23px;
+    }
+
+    .card .description{
+        display: none;
+    }
+
+    #footer img{
+        max-width: 100%;
+    }
+}
