--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,7 +64,7 @@
     }
 
     #footer .wrap > div{
-        width: 26%;
+        width: 25%;
         margin: 25px;
     }
 
@@ -142,5 +142,34 @@
 
     #footer img{
         max-width: 100%;
+    }
+}
+
+@media (max-width: 724px){
+    #header{
+        width: 100%;
+        height: 120px;
+        padding-top: 10px;
+    }
+
+    #logo{
+        float: none;
+        width: 200px;
+        margin: 0px auto;
+    }
+
+    #menu {
+        clear: both;
+        float: none;
+        width: 440px;
+        margin: 0px auto;
+    }
+
+    #lateral input[type="text"] {
+        width: 70%;
+    }
+
+    #social .overlay{
+        margin-left: 56px;
     }
 }
