--- a/css/responsive.css
+++ b/css/responsive.css
@@ -176,7 +176,7 @@
 
 @media (max-width: 658px){
     #banner h1{
-        font-size: 25px;
+        font-size: 24px;
     }
 
     #lateral{
@@ -223,5 +223,77 @@
 
     #footer h5{
         font-size: 25px;
+    }
+}
+
+@media (max-width: 475px){
+    #logo{
+        float: left;
+    }
+
+    #header{
+        width: 100%;
+        height: 275px;
+        padding-top: 10px;
+    }
+
+    #menu {
+        clear: both;
+        float: none;
+        width: 100%;
+        margin: 0px auto;
+    }
+
+    #menu ul li{
+        width: 100%;
+        line-height: 53px;
+    }
+
+    #menu ul li a:hover {
+        color: #37bcf9;
+        transform: scale(1, 1);
+    }
+
+    #banner{
+        height: 85px;
+    }
+
+    #banner h1{
+        font-size: 18px;
+
+    }
+
+    #lateral input[type="text"]{
+        width: 85%;
+    }
+
+    #social a{
+        margin-left: 150px;
+    }
+
+    #social .overlay{
+        margin-left: 200px;
+    }
+
+    .card .icon{
+        font-size: 35px;
+    }
+
+    .card:hover .icon{
+        font-size: 40px;
+    }
+
+    .card .category{
+        font-size: 13px;
+    }
+
+    #articles .data {
+        float: none;
+        margin: -10px;
+        border-radius: 0px 0px 0px 0px;
+    }
+
+    #articles article h4{
+        margin-top: 20px;
     }
 }
